samples/_failures_safe/1761457054_c4b904_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7a5237d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e7a5237d.c:170:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  170 |         strcpy(tokens[token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_e7a5237d.c:170:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e7a5237d.c:170:28: error: expected ‘]’ at end of input
  170 |         strcpy(tokens[token
      |                            ^
      |                            ]
./samples/SAFE/__tmp_e7a5237d.c:170:9: error: too few arguments to function ‘strcpy’
  170 |         strcpy(tokens[token
      |         ^~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_e7a5237d.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_e7a5237d.c:170:9: error: expected declaration or statement at end of input
  170 |         strcpy(tokens[token
      |         ^~~~~~
./samples/SAFE/__tmp_e7a5237d.c:170:9: error: expected declaration or statement at end of input
